kustomize/arr-stack/jackett/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jackett
spec:
  externalTrafficPolicy: Local
  loadBalancerIP: 192.168.253.35
  selector:
    app: jackett
  type: LoadBalancer
  ports:
    - port: 9117
      targetPort: http
      protocol: TCP
      name: http
