kustomize/arr-stack/jackett/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jackett
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jackett-k8s.vinicima.com`)
      kind: Rule
      services:
        - name: jackett
          port: 9117
      middlewares:
        - name: body-size-50m
          namespace: traefik
  tls:
    secretName: vinicima-com-tls
